fix noti gap

--- a/src/client/src/components/Navbar/Notification/styles.module.scss
+++ b/src/client/src/components/Navbar/Notification/styles.module.scss
@@ -70,7 +70,7 @@
 
       ul {
         width: 100% !important;
-        height: 250px !important;
+        height: 350px !important;
         padding-left: 0%;
         overflow-y: scroll;
         overflow-x: hidden;
